# ffg-crawl

./: .dir-locals.el  .envrc  .gitignore  LICENSE  pyproject.toml
chat/: pyproject.toml
chat/chat/: __init__.py  __main__.py  chunk.py  db.py  keywords.py  pdf.py  prompt.py
chat/chat/entry_points/: __init__.py  ask.py  clear_cache.py  create_tables.py  drop_tables.py  load_chunks.py  load_keywords.py  load_tcidfs.py  load_tcidfs2.py  load_tfidf.py  load_tfidfs.py  load_words.py  tfidf.py
chat/tests/: test_chunk.py
ffgcrawl/: create-proxies  scrapy.cfg
ffgcrawl/.scrapy/httpcache/ffg-crawl/fc/fcfaf3f4110e120d811a738f80062037273b7f90/: meta  pickled_meta  response_body  response_headers
ffgcrawl/ffgcrawl/: db.py  items.py  middlewares.py  pipelines.py  settings.py
ffgcrawl/ffgcrawl/spiders/: ffg_crawl.py
works/: .gitignore  20230404_check_pdf.ipynb  20230404_check_text.ipynb  20230405-dev_keywords.ipynb  20230405_check_api.ipynb  20230405_dev_tokenizer.ipynb  20230408-prompt.ipynb  20230408-tfidf.ipynb  20230409-context.ipynb  20230409-context2.ipynb  pdfs.txt  pyproject.toml  readme.md  texts.txt  yhtokenize.py
works/examples/chatbot/: Chatbot_SEC.ipynb
works/examples/paul_graham_essay/: TestEssay.ipynb  index.json
works/pdfs/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+40 more)
