[tool.poetry]
name = "ffg-crawl"
version = "0.1.0"
description = "crawl information of Fukuoka Financial Group"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
