[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
mecab-python3 = "^1.0.6"
ipadic = "^1.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
