[tool.poetry]
name = "works"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
jmanager = "^1.8.2"
pandas = "^2.0.0"
pypdf2 = "^3.0.1"
llama-index = "^0.5.7"
mecab-python3 = "^1.0.6"
ipadic = "^1.0.0"
yuzu = "^4.1.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
